tests/snapshots/run_wpt_conformance__trtx_maxPool2d_float32_4D_tensor_options_outputSizes_ignores_options_outputShapeRounding_ceil.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "maxPool2d.https.any.js",
    "maxPool2d float32 4D tensor options.outputSizes ignores options.outputShapeRounding=ceil",
    "trtx",
    "PASS",
)
