tests/snapshots/run_wpt_conformance__trtx_maxValue_as_-Infinity.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "maxValue as -Infinity",
    "trtx",
    "PASS",
)
